--- a/assets/theme.css
+++ b/assets/theme.css
@@ -50,3 +50,45 @@ body {
 .footer .container .text-muted {
   margin: 20px 0;
 }
+
+.sharebar{
+  margin: 0px 10px 6px 0;
+}
+
+.sharebar li a{
+  float: left;
+  font-size: 12px;
+  padding-top: 5px;
+  padding-bottom: 5px;  
+  padding-left: 8px;  
+  padding-right: 8px;
+  line-height: 16px;
+  height: 16px;
+  background-image: url(icons_0_16.png);
+  background-repeat: no-repeat;
+  cursor: pointer;
+  margin: 6px 10px 6px 0;
+}
+
+.sharebar .cnRenren {
+  background-position: 0 -208px;
+}
+.sharebar .cnDouban {
+  background-position: 0 -468px;
+}
+
+.sharebar .cnQzone {
+  background-position: 0 -52px;
+}
+
+.sharebar .cnTqq {
+  background-position: 0 -260px;
+}
+
+.sharebar .cnTsina {
+  background-position: 0 -104px;
+}
+.sharebar .cnWeixin {
+  background-position: 0 -1612px;
+}
+
