--- a/assets/theme.css
+++ b/assets/theme.css
@@ -94,7 +94,7 @@ html {
 }
 
 .block-foot {
-  background-color: #CCCCFF;
+  background-color: #B1ECD3;
 }
 .link-row{
   border-bottom: 1px dashed #ccc;
